由于需求变化 小范围修改

--- a/wp-content/themes/hit_fund/style.css
+++ b/wp-content/themes/hit_fund/style.css
@@ -2340,7 +2340,7 @@ border:2px;
     background:#ececec;
 	border-top: 1px solid #ddd;
 	color: black;
-    font-weight:800;
+    //font-weight:800;
 	font-size: 12px;
 	line-height: 2.2em;
 	padding: 2.2em 0.5em;
